# MindVibe

./: .bandit  .coverage  .dockerignore  .env  .env.example  .env.production  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .ruff.toml  3D_TRANSFORMATION_SUMMARY.md  ANIMATION_IMPLEMENTATION_SUMMARY.md  ARDHA_VIYOGA_INTEGRATION_SUMMARY.md  AUDIT_CACHE_FRAMEWORK.md  AUDIT_REPORT.md  AUDIT_VOICE_COMPANION.md  AUDIT_VOICE_DEEP.md  BHAGAVAD_GITA_DATASET_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLEANUP_PROGRESS.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_TEST_REPORT.md  CONFIDENTIAL_NOTICE.md  CONTRIBUTING.md  CRITICAL_FIXES_DEC2024.md  DDOS_MULTILINGUAL_SUMMARY.md  Dockerfile  FIXES_IMPLEMENTED.md  FONT_LICENSES.md  GITA_IMPLEMENTATION_SUMMARY.md  GITA_WISDOM_ADHERENCE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_DEC11.md  IMPROVEMENT_ROADMAP.md  (+87 more)
.aider/: config.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
MindVibe/: __init__.py
aiosqlite/: __init__.py
app/: ClientLayout.tsx  apple-icon.tsx  error.tsx  global-error.tsx  globals.css  icon.tsx  layout.tsx  loading.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  page.tsx.backup  providers.tsx  robots.ts  sitemap.ts  twitter-image.tsx
backend/: __init__.py  db_utils.py  deps.py  main.py  models.py  observability.py  schemas.py
components/: AnimatedPeaceLogo.tsx  ErrorBoundary.tsx  FeatureHighlights.tsx  GrowthJourney.tsx  LanguageSettings.tsx  LanguageSwitcher.tsx  MinimalLanguageSelector.tsx  OfflineModeToggle.tsx  OfflineStatusBanner.tsx  ServiceWorkerRegistration.tsx  SyncStatusWidget.tsx  Toast.tsx  TranslateIcon.tsx  WebVitalsReporter.tsx
config/: environment.ts  translation.ts
contexts/: AudioContext.tsx  DivineConsciousnessContext.tsx  MusicContext.tsx  VoiceToTextContext.tsx  WakeWordContext.tsx
core/: errors.py  settings.py
data/: _init_.py  ardha_knowledge_base.py  authentic_key_verses.json  gitaVerses.ts  gita_verses.json  gita_wisdom.py  journey_templates.json
docs/: 3D_ANIMATIONS_GUIDE.md  AIDER.md  AI_ASSISTANT_VOICE_PLAN.md  ANALYTICS_API.md  ANDROID_LAUNCH_GUIDE.md  ANDROID_PLAYSTORE_GUIDE.md  BACKEND_SECURITY_HARDENING.md  BHAGAVAD_GITA_IMPLEMENTATION.md  CAPACITY_LIMITS_REPORT.md  CHATBOT.md  CHATBOT_SETUP.md  COMPLIANCE_CHECKLIST.md  COMPLIANCE_POSTURE.md  CONTRIBUTING.md  CRITIC_REVIEW.md  DEVELOPER_GUIDE_NEW_LANGUAGE.md  DOMAIN_MIGRATION_GUIDE.md  ENHANCEMENT_2_PROGRESS_REPORT.md  ENHANCEMENT_3_VOICE_GUIDANCE.md  ENHANCEMENT_4_EMOTION_THEMES.md  ENHANCEMENT_5_COMMUNITY_CIRCLES.md  ENHANCEMENT_6_ADVANCED_ANALYTICS.md  ENV_VARS.md  FEATURE_ACCESS.md  FEATURE_PRICING_EVALUATION.md  FRAMEWORK.md  GITA_CORPUS_README.md  GITA_WISDOM_DATABASE.md  I18N_IMPLEMENTATION.md  INDEX.md  INTEGRATION.md  INTERNATIONALIZATION.md  IP_FLOWCHARTS.md  JOURNEY_MOBILE_FEASIBILITY_AND_VOICE_ROADMAP.md  KAIANVERSE_APP_CONVERSION_PLAN.md  KARMA_RESET_KIAAN.md  KARMA_RESET_TROUBLESHOOTING.md  KEYS.md  KIAANVERSE_FRAMEWORK_SYNOPSIS.md  KIAANVERSE_MOBILE_FRAMEWORK.md  (+67 more)
examples/: __init__.py  chatbot_example.py  wisdom_api_examples.py
hooks/: index.ts  use3DAnimation.ts  useActivityLog.ts  useAdvancedVoiceLearning.ts  useAnalytics.ts  useAudioAnalyzer.ts  useAuth.ts  useBiometricAuth.ts  useCacheManager.ts  useChatTranslation.tsx  useCountdown.ts  useCurrency.ts  useDailyRefresh.ts  useDataExport.ts  useDivineContent.ts  useDivineVoiceConversation.ts  useEliteVoice.ts  useEmotionTheme.ts  useEnhancedVoiceOutput.ts  useFeatureAccess.ts  useGitaVR.ts  useHandsFreeMode.ts  useHapticFeedback.ts  useJournalEditor.ts  useJournalEntries.ts  useKIAANJournalInsight.ts  useKeyboardVisibility.ts  useKiaanQuota.ts  useKiaanVoice.ts  useKiaanverse.ts  useLanguage.tsx  useLocaleFormat.ts  useMessageTranslation.ts  useMicroPause.ts  useNetworkStatus.ts  useOfflineForm.ts  (+24 more)
(+3465 files in other folders)
